# my-rust-project

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml
exportToHTML/: auth.rs.html  index.html  mod.rs.html  wallet.rs.html
migrations/2025-05-23-084616_create_users/: up.sql
src/: main.rs
src/models/: mod.rs  transaction.rs  user.rs  wallet.rs
src/routes/: mod.rs  transaction_routes.rs  user_routes.rs  wallet_routes.rs
